# KDTree-Implemention

./: README.md
KDTree_C_demo_1/: CMakeLists.txt  Global_Def.cpp  Global_Def.h  KNN.cpp  KNN.h  Naive_KNN.cpp  Naive_KNN.h  Node.h  Point.cpp  Point.h  main.cpp
KDTree_C_demo_2/: CMakeLists.txt  Global_Def.cpp  Global_Def.h  KNN.cpp  KNN.h  Naive_KNN.cpp  Naive_KNN.h  Node.cpp  Node.h  Point.cpp  Point.h  main.cpp
KDTree_demo_1/: KNN.py  Node_Point.py  main.py
KDTree_demo_2/: KNN.py  Node_Point.py  draw.py  main.py  test.py
KDTree_demo_3/: Hyperparameters.py  KNN.py  Point.py  main.py
KDTree_demo_4/: Hyperparameters.py  KNN.py  Node.py  Titanic_Test.ipynb  main.py  my_result_k_1.csv  my_result_k_11.csv  my_result_k_13.csv  my_result_k_15.csv  my_result_k_17.csv  my_result_k_19.csv  my_result_k_3.csv  my_result_k_5.csv  my_result_k_7.csv  my_result_k_9.csv  test_1.csv  train_1.csv  training_data.csv
KDTree_demo_5/: Hyperparameters.py  KNN.py  main.py
KDTree_demo_6/: Hyperparameters.py  KNN.py  Point.py  main.py
